--- a/whats_app_chat_analysis.ipynb
+++ b/whats_app_chat_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "id": "72b987b8",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "id": "f5efeef3",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "id": "3de49c3d",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "id": "eff58acd",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
      "text": [
       "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "/var/folders/s5/w767hn_x4z7db6683kjg2qdr0000gn/T/ipykernel_155/2716954415.py:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "/var/folders/s5/w767hn_x4z7db6683kjg2qdr0000gn/T/ipykernel_45833/2716954415.py:1: SyntaxWarning: invalid escape sequence '\\d'\n",
       "  pattern = '\\d{1,2}/\\d{1,2}/\\d{1,2},\\s\\d{1,2}:\\d{2}\\s-\\s'\n"
      ]
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "id": "a228b7e6",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "id": "ea467dc0",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "id": "59acac17",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "id": "fb910796",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "4  Nitesh Makaut joined using this group's invite... 2023-11-30 17:37:00"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "id": "fc42d508",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
        "(4354, 2)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "id": "77544ab8",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
      "text": [
       "<>:7: SyntaxWarning: invalid escape sequence '\\w'\n",
       "<>:7: SyntaxWarning: invalid escape sequence '\\w'\n",
-      "/var/folders/s5/w767hn_x4z7db6683kjg2qdr0000gn/T/ipykernel_155/337832967.py:7: SyntaxWarning: invalid escape sequence '\\w'\n",
+      "/var/folders/s5/w767hn_x4z7db6683kjg2qdr0000gn/T/ipykernel_45833/337832967.py:7: SyntaxWarning: invalid escape sequence '\\w'\n",
       "  entry = re.split('([\\w\\W]+?):\\s' , mssg)\n"
      ]
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "id": "1c5a1848",
    "metadata": {},
    "outputs": [
@@ -259,96 +259,96 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1422</th>\n",
-       "      <td>2024-06-20 11:56:00</td>\n",
-       "      <td>Priyansh Srivastav Makaut</td>\n",
-       "      <td>Happy birthday @⁨~Indrayudh⁩\\n</td>\n",
+       "      <th>1139</th>\n",
+       "      <td>2024-04-29 21:09:00</td>\n",
+       "      <td>Sritama Makaut</td>\n",
+       "      <td>&lt;Media omitted&gt;\\n</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1293</th>\n",
-       "      <td>2024-06-06 12:06:00</td>\n",
-       "      <td>+91 62970 65903</td>\n",
-       "      <td>Madam amar konsa আত্মীয় hoi j amar kotha sunbe\\n</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>682</th>\n",
-       "      <td>2024-03-03 14:09:00</td>\n",
-       "      <td>Priyansh Srivastav Makaut</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4060</th>\n",
-       "      <td>2025-09-10 23:02:00</td>\n",
-       "      <td>Rohit Makaut</td>\n",
-       "      <td>Kisi ko individually nei bty the bas class mai...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>322</th>\n",
-       "      <td>2024-01-01 00:30:00</td>\n",
-       "      <td>Priyansh Srivastav Makaut</td>\n",
-       "      <td>Happy new year 🎊\\n</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3143</th>\n",
-       "      <td>2025-03-05 22:09:00</td>\n",
+       "      <th>933</th>\n",
+       "      <td>2024-03-22 10:39:00</td>\n",
        "      <td>Madhusudan Singh Makaut</td>\n",
-       "      <td>Nhi\\n</td>\n",
+       "      <td>Academic\\n</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2738</th>\n",
-       "      <td>2025-01-12 20:13:00</td>\n",
-       "      <td>Rohit Makaut</td>\n",
-       "      <td>Mera 0\\n</td>\n",
+       "      <th>1678</th>\n",
+       "      <td>2024-07-18 21:26:00</td>\n",
+       "      <td>Madhusudan Singh Makaut</td>\n",
+       "      <td>Muskuraiye ap makaut me h\\n</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1484</th>\n",
-       "      <td>2024-06-28 06:20:00</td>\n",
-       "      <td>Priyansh Srivastav Makaut</td>\n",
+       "      <th>22</th>\n",
+       "      <td>2023-12-04 09:24:00</td>\n",
+       "      <td>Nitesh Makaut</td>\n",
+       "      <td>Oo\\n\\nKahi ghumne nikal ja mere bhai..\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>2023-12-18 12:08:00</td>\n",
+       "      <td>+91 77973 95173</td>\n",
+       "      <td>Main math ka Assignment deke nikal lunga\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3282</th>\n",
+       "      <td>2025-03-28 14:08:00</td>\n",
+       "      <td>Hritik Makaut</td>\n",
+       "      <td>Oyee koi coa ka lab copy banaya hai to mughe s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>425</th>\n",
+       "      <td>2024-01-15 00:39:00</td>\n",
+       "      <td>Prem Ranjan Makaut</td>\n",
+       "      <td>Happy birthday @⁨MD MOAZZAM Makaut⁩ 🥳\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>967</th>\n",
+       "      <td>2024-03-27 12:02:00</td>\n",
+       "      <td>Sritama Makaut</td>\n",
        "      <td>&lt;Media omitted&gt;\\n</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>260</th>\n",
-       "      <td>2023-12-28 00:12:00</td>\n",
-       "      <td>Harsh Pandey Makaut</td>\n",
-       "      <td>Happy birthday @⁨Prem Ranjan Makaut⁩ 🎉🎈🎂❤️\\n</td>\n",
+       "      <th>3695</th>\n",
+       "      <td>2025-06-16 22:24:00</td>\n",
+       "      <td>+91 90640 36674</td>\n",
+       "      <td>&lt;Media omitted&gt;\\n</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4255</th>\n",
-       "      <td>2025-09-12 18:20:00</td>\n",
-       "      <td>Suchana makaut</td>\n",
-       "      <td>&lt;Media omitted&gt;\\n</td>\n",
+       "      <th>1395</th>\n",
+       "      <td>2024-06-18 01:57:00</td>\n",
+       "      <td>Prem Ranjan Makaut</td>\n",
+       "      <td>This message was deleted\\n</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    date                      users  \\\n",
-       "1422 2024-06-20 11:56:00  Priyansh Srivastav Makaut   \n",
-       "1293 2024-06-06 12:06:00            +91 62970 65903   \n",
-       "682  2024-03-03 14:09:00  Priyansh Srivastav Makaut   \n",
-       "4060 2025-09-10 23:02:00               Rohit Makaut   \n",
-       "322  2024-01-01 00:30:00  Priyansh Srivastav Makaut   \n",
-       "3143 2025-03-05 22:09:00    Madhusudan Singh Makaut   \n",
-       "2738 2025-01-12 20:13:00               Rohit Makaut   \n",
-       "1484 2024-06-28 06:20:00  Priyansh Srivastav Makaut   \n",
-       "260  2023-12-28 00:12:00        Harsh Pandey Makaut   \n",
-       "4255 2025-09-12 18:20:00             Suchana makaut   \n",
+       "                    date                    users  \\\n",
+       "1139 2024-04-29 21:09:00           Sritama Makaut   \n",
+       "933  2024-03-22 10:39:00  Madhusudan Singh Makaut   \n",
+       "1678 2024-07-18 21:26:00  Madhusudan Singh Makaut   \n",
+       "22   2023-12-04 09:24:00            Nitesh Makaut   \n",
+       "168  2023-12-18 12:08:00          +91 77973 95173   \n",
+       "3282 2025-03-28 14:08:00            Hritik Makaut   \n",
+       "425  2024-01-15 00:39:00       Prem Ranjan Makaut   \n",
+       "967  2024-03-27 12:02:00           Sritama Makaut   \n",
+       "3695 2025-06-16 22:24:00          +91 90640 36674   \n",
+       "1395 2024-06-18 01:57:00       Prem Ranjan Makaut   \n",
        "\n",
        "                                                message  \n",
-       "1422                     Happy birthday @⁨~Indrayudh⁩\\n  \n",
-       "1293  Madam amar konsa আত্মীয় hoi j amar kotha sunbe\\n  \n",
-       "682                                                      \n",
-       "4060  Kisi ko individually nei bty the bas class mai...  \n",
-       "322                                  Happy new year 🎊\\n  \n",
-       "3143                                              Nhi\\n  \n",
-       "2738                                           Mera 0\\n  \n",
-       "1484                                  <Media omitted>\\n  \n",
-       "260        Happy birthday @⁨Prem Ranjan Makaut⁩ 🎉🎈🎂❤️\\n  \n",
-       "4255                                  <Media omitted>\\n  "
+       "1139                                  <Media omitted>\\n  \n",
+       "933                                          Academic\\n  \n",
+       "1678                        Muskuraiye ap makaut me h\\n  \n",
+       "22             Oo\\n\\nKahi ghumne nikal ja mere bhai..\\n  \n",
+       "168          Main math ka Assignment deke nikal lunga\\n  \n",
+       "3282  Oyee koi coa ka lab copy banaya hai to mughe s...  \n",
+       "425             Happy birthday @⁨MD MOAZZAM Makaut⁩ 🥳\\n  \n",
+       "967                                   <Media omitted>\\n  \n",
+       "3695                                  <Media omitted>\\n  \n",
+       "1395                         This message was deleted\\n  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 12,
    "id": "3d5b8e68",
    "metadata": {},
    "outputs": [],
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 13,
    "id": "ef09b8dc",
    "metadata": {},
    "outputs": [],
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 14,
    "id": "62ccc02f",
    "metadata": {},
    "outputs": [
@@ -472,7 +472,7 @@
        "4  Nitesh Makaut joined using this group's invite...  2023  November  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 15,
    "id": "e5a193b1",
    "metadata": {},
    "outputs": [],
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "id": "d87db108",
    "metadata": {},
    "outputs": [],
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 17,
    "id": "61f02b9a",
    "metadata": {},
    "outputs": [],
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 18,
    "id": "f454c766",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
        "4    17      37  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 19,
    "id": "1b299f9c",
    "metadata": {},
    "outputs": [],
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 20,
    "id": "d1990366",
    "metadata": {},
    "outputs": [
@@ -757,7 +757,7 @@
        "4  2023  November   30    17      37  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,8 +768,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "e7c37304",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "159"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['users']=='Prince Makaut'].shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40265b86",
    "metadata": {},
    "outputs": [],
    "source": []
